--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,16 @@
   </dependencies>
 
   <build>
+      <sourceDirectory>src/main/java</sourceDirectory>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
+    <resources>
+	  <resource>
+	    <directory>src/main/resources</directory>
+	  </resource>
+      <resource>
+        <directory>src/test/resources</directory>
+      </resource>
+    </resources>
     <pluginManagement>
       <plugins>
         <!-- Clean Plugin -->
